02-appdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appdb
spec:
  selector:
    matchLabels:
      app: appdb
  template:
    metadata:
      labels:
        app: appdb
    spec:
      containers:
      - name: appdb
        image: vprofile/vprofiledb:V1
        args:
          - "--ignore-db-dir=lost+found"
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: app-db-data
        ports:
        - name: appdb-port
          containerPort: 3306
      nodeSelector:
        zone: ap-south-1a
      volumes:
        - name: app-db-data
          awsElasticBlockStore:
            volumeID: vol-0912218b668be2608
            fsType: ext4
