04-rmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpromq01
spec:
  selector:
    matchLabels:
      app: vpromq01
  template:
    metadata:
      labels:
        app: vpromq01
    spec:
      containers:
      - name: apprmq
        image: rabbitmq
        ports:
        - name: vpromq01-port
          containerPort: 15672
