08-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
spec:
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
      - name: app
        image: vprofile/vprofileapp:V1
        ports:
        - name: vproapp-port
          containerPort: 8080
