03-appdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appdb
spec:
  selector:
    app: appdb
  ports:
  - port: 3306
    targetPort: appdb-port
