05-rmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apprmq
spec:
  selector:
    app: apprmq
  ports:
  - port: 15672
    targetPort: apprmq-port
  type: ClusterIP
