07-memc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appmc
spec:
  selector:
    app: appmc
  ports:
  - port: 11211
    targetPort: appmc-port
    protocol: TCP
  type: ClusterIP
